# List of test directories to be executed
add_subdirectory(array1)
add_subdirectory(array2)
#add_subdirectory(array3) # on hold for the moment
add_subdirectory(array4)
#add_subdirectory(array5)
add_subdirectory(array6)
add_subdirectory(array7)
add_subdirectory(array8)
add_subdirectory(continuation)
